[package]
name = "jelly"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.13.1", default-features = false }
color-eyre = { version = "0.6.2", default-features = false }
clap = { version = "4.0.27", default-features = false, features = [
  "color",
  "derive",
  "env",
  "error-context",
  "help",
  "std",
] }
ctrlc = "3.4.4"
eyre = { version = "0.6.8", default-features = false }
fsevent-sys = { version = "4.1.0", default-features = false }
glob = { version = "0.3.0", default-features = false }
gray_matter = { version = "0.2.4", default-features = false, features = [
  "yaml",
] }
handlebars = { version = "4.3.5", default-features = false }
indoc = { version = "1.0.8", default-features = false }
markdown-it = { version = "0.4.0", default-features = false }
notify = { version = "6.0.1" }
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.88", default-features = false }
serde_yaml = { version = "0.9.14", default-features = false }
slug = { version = "0.1.4", default-features = false }
syntect = { version = "5.0.0", default-features = false, features = [
  "default-syntaxes",
  "html",
  "regex-onig",
] }
thiserror = { version = "1.0.37", default-features = false }
titlecase = { version = "2.2.1", default-features = false }
open = "5.1.2"
tiny_http = "0.12.0"
tracing = "0.1.40"
mime_guess = "2.0.4"
