[package]
name = "jelly"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22", default-features = false }
clap = { version = "4.5", default-features = false, features = [
  "color",
  "derive",
  "env",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage",
] }
color-eyre = { version = "0.6", default-features = false }
eyre = { version = "0.6", default-features = false }
glob = { version = "0.3", default-features = false }
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }
handlebars = { version = "5.1", default-features = false }
indoc = { version = "2.0", default-features = false }
markdown-it = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
slug = { version = "0.1", default-features = false }
syntect = { version = "5", default-features = false, features = [
  "default-syntaxes",
  "html",
  "regex-onig",
] }
thiserror = { version = "1", default-features = false }
titlecase = { version = "3", default-features = false }
